<resources>
    <string name="app_name">FourOneOne</string>
    <string name="welcome_message">411</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember">Remember</string>
    <string name="weather_title">Weather in </string>
    <string name="weather_temp"> °F</string>
    <string name="weather_humidity">Relative humidity: </string>
    <string name="weather_windspeed">Wind speed: </string>
    <string name="weather_feelslike">Feels like: </string>
    <string name="weather_clouds">Cloud coverage: </string>
    <string name="news_button_string">News</string>
    <string name="spotify_button_string">Spotify</string>
    <string name="fortune_cookie_button_string">Fortune Cookie</string>
    <string name="menu_weather_text">Weather</string>
    <string name="quote_button">Random Quote</string>
    <string name="advice_button">Random Advice</string>

</resources>
